err/etra.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chainer'...
Listing './lib/python3.5/site-packages/chainer/dataset'...
Listing './lib/python3.5/site-packages/chainer/datasets'...
Listing './lib/python3.5/site-packages/chainer/function_hooks'...
Listing './lib/python3.5/site-packages/chainer/functions'...
Listing './lib/python3.5/site-packages/chainer/functions/activation'...
Listing './lib/python3.5/site-packages/chainer/functions/array'...
Listing './lib/python3.5/site-packages/chainer/functions/connection'...
Listing './lib/python3.5/site-packages/chainer/functions/evaluation'...
Listing './lib/python3.5/site-packages/chainer/functions/loss'...
Listing './lib/python3.5/site-packages/chainer/functions/math'...
Listing './lib/python3.5/site-packages/chainer/functions/noise'...
Listing './lib/python3.5/site-packages/chainer/functions/normalization'...
Listing './lib/python3.5/site-packages/chainer/functions/pooling'...
Listing './lib/python3.5/site-packages/chainer/functions/theano'...
Listing './lib/python3.5/site-packages/chainer/functions/util'...
Listing './lib/python3.5/site-packages/chainer/initializers'...
Listing './lib/python3.5/site-packages/chainer/iterators'...
Listing './lib/python3.5/site-packages/chainer/links'...
Listing './lib/python3.5/site-packages/chainer/links/activation'...
Listing './lib/python3.5/site-packages/chainer/links/caffe'...
Listing './lib/python3.5/site-packages/chainer/links/caffe/protobuf3'...
Listing './lib/python3.5/site-packages/chainer/links/connection'...
Listing './lib/python3.5/site-packages/chainer/links/loss'...
Listing './lib/python3.5/site-packages/chainer/links/model'...
Listing './lib/python3.5/site-packages/chainer/links/model/vision'...
Listing './lib/python3.5/site-packages/chainer/links/normalization'...
Listing './lib/python3.5/site-packages/chainer/links/theano'...
Listing './lib/python3.5/site-packages/chainer/optimizers'...
Listing './lib/python3.5/site-packages/chainer/serializers'...
Listing './lib/python3.5/site-packages/chainer/testing'...
Listing './lib/python3.5/site-packages/chainer/training'...
Listing './lib/python3.5/site-packages/chainer/training/extensions'...
Listing './lib/python3.5/site-packages/chainer/training/triggers'...
Listing './lib/python3.5/site-packages/chainer/training/updaters'...
Listing './lib/python3.5/site-packages/chainer/utils'...
Listing './lib/python3.5/site-packages/chainer-3.2.0.egg-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/fullcoverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-4.4.2.dist-info'...
Listing './lib/python3.5/site-packages/etra'...
Listing './lib/python3.5/site-packages/etra/io'...
Listing './lib/python3.5/site-packages/etra/ling'...
Listing './lib/python3.5/site-packages/etra/model'...
Listing './lib/python3.5/site-packages/etra/utils'...
Compiling './lib/python3.5/site-packages/etra/utils/gpu.py'...
***   File "./lib/python3.5/site-packages/etra/utils/gpu.py", line 16
    print "Warning: pyvnml is not available, cannot detect GPU card automatically"
                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/etra-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/filelock-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/nvidia_ml_py-375.53.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Compiling './lib/python3.5/site-packages/pynvml.py'...
***   File "./lib/python3.5/site-packages/pynvml.py", line 1831
    print c_count.value
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
